# ML-LinearSpace

./: .gitignore  .gitignore.swp  0_4_4_4_1_0.json  10_10_7_0_2_0.json  12_8_6_0_3_0.json  14_8_7_0_2_0.json  15_6_5_4_0_0.json  16_8_8_0_1_0.json  17_10_7_0_2_0.json  19_6_5_2_2_0.json  20_8_7_2_0_0.json  21_7_7_1_1_0.json  22_10_7_0_2_0.json  25_16_8_0_1_0.json  26_6_4_4_1_0.json  27_12_6_2_0_0.json  28_8_6_0_3_0.json  29_7_5_1_2_0.json  4_11_8_1_0_0.json  5_11_7_1_1_0.json  6_9_8_1_0_0.json  7_7_6_1_2_0.json  README.md  log.txt  loss.json  model.pt  model_4molecules.pt  pyproject.toml  slurm-28406120.out  submit.sh  test.py  test_inp.py  torchrun_script.sh  train_func.py  train_inp.py  train_parallel.py  train_serial.py  workspace.py
basis/: def2-svp  def2-svp.1.nw  integral.py  orbitals.py  orbitals_new.json
data/: Methane.json  OH_data.json  __init__.py  data_examination.py  dataframe.py  generate_obs_mat.py  link_to_data  loader.py
dataset/H4_train/: test_data.ipynb
demo/infer_orca/: infer_inp.py  read.py
demo/test/: test_inp.py
deploy/: __init__.py  apply.py  deploy_cls.py  test_func.py
model/: __init__.py  model_cls.py  sample_minibatch.py  tomat.py
pkgs/: dataframe.py  deploy.py  integral.py  loss_fns.py  model.py  predictor.py  sample_minibatch.py  tomat.py  train.py  train_ddp.py
script/: basis  deploy.py  edge_state.py  generate_ccsdt.py  generate_obs_mat.py  orbitals.json  read.py  test.py  train_multinode.py  train_parallel.py  train_serial.py
test_output/: OH.json
train/: __init__.py  loss_fns.py  output.py  train_cls.py  train_func.py
(+1635 files in other folders)
